--- a/public/UN01.html
+++ b/public/UN01.html
@@ -132,7 +132,7 @@
                                 <div class="section-header text">
                                     <p>Owner &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; : Mass Rapid Transit Authority Of Thailand </p>
                                     <br />
-                                    <p>Main Contractor &nbsp; &nbsp;	  : Unique Engineering and Construction Public Company</p>
+                                    <p>Main Contractor &nbsp;: Unique Engineering and Construction Public Company</p>
                                     <br />
                                     <p>Scope of Work &nbsp; &nbsp;	: All System Works, 21 sections of EE and ME system works  </p>
                                     <br />
