--- a/public/index.html
+++ b/public/index.html
@@ -756,12 +756,12 @@
                                     <img src="img/portfolio-1.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                           New Warehouse , Monde Nissin
+                                           New Raw Material Warehouse<br>Monde Nissin
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>New Raw Material Warehouse</h3>
+                                    <h3>New Warehouse Monde Nissin</h3>
                                     <a href="MN01.html" class="btn"  >+</a>
                                 </div>
                             </div>
