--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -132,16 +132,16 @@
                         <p>Our Projects</p>
                         <h2>Visit Our Projects</h2>
                     </div>
-                    <!-- <div class="row">
+                    <div class="row">
                         <div class="col-12">
                             <ul id="portfolio-flters">
-                                <li data-filter="*" class="filter-active">All</li>
-                                <li data-filter=".first">Complete</li>
-                                <li data-filter=".second">Running</li>
-                                <li data-filter=".third">Upcoming</li>
+                                <li data-filter=".first" class="filter-active">1</li>
+                                <li data-filter=".second">2</li>
+                                <li data-filter=".third">3</li>
+                                <li data-filter=".fourth">4</li>
                             </ul>
                         </div>
-                    </div> -->
+                    </div>
                     <div class="row portfolio-container">
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.1s">
                             <div class="portfolio-warp">
@@ -149,17 +149,17 @@
                                     <img src="img/portfolio-1.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                           New Raw Material Warehouse , Monde Nissin
+                                           New Raw Material Warehouse<br> Monde Nissin
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>New Raw Material Warehouse</h3>
+                                    <h3>New Warehouse Monde Nissin</h3>
                                     <a href="MN01.html" class="btn"  >+</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.2s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.2s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/UN4.png" alt="Image">
@@ -175,7 +175,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.3s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/TG4.png" alt="Image">
@@ -191,7 +191,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.4s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/TC3.png" alt="Image">
@@ -207,7 +207,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.5s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/MEA7.png" alt="Image">
@@ -223,7 +223,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/MEA6.png" alt="Image">
@@ -240,7 +240,7 @@
                                 </div>
                             </div>
                         </div>
-                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.8s">
+                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.1s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/FE4.jpg" alt="Image">
@@ -256,13 +256,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.2s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Petchkasem3.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            10th Floors Car Park Building, Petkasem 2 Hospital
+                                            10th Floors Car Park Building<br>Petkasem 2 Hospital
                                         </p>
                                     </div>
                                 </div>
@@ -291,7 +291,7 @@
                                 </div>
                             </div>
                         </div> -->
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.3s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Circle11.jpg" alt="Image">
@@ -307,7 +307,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.4s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/SIG5.jpg" alt="Image">
@@ -323,7 +323,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Circle10.jpg" alt="Image">
@@ -339,13 +339,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Buriram9.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            12.5 Mw  Solar Power Plant for <br>BCP Nongkee, Buriram 
+                                            12.5 Mw  Solar Power Plant<br>BCP Nongkee, Buriram 
 
                                         </p>
                                     </div>
@@ -356,13 +356,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.1s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Buriram7.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            12.5 Mw  Solar Power Plant for <br>BCP Prakonchai, Buriram
+                                            12.5 Mw  Solar Power Plant<br>BCP Prakonchai, Buriram
                                         </p>
                                     </div>
                                 </div>
@@ -372,13 +372,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.2s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Prachinburi4.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                           25 Mw  Solar Power Plant for <br>BCP Kabinburi, Prachinburi 
+                                           25 Mw  Solar Power Plant<br>BCP Kabinburi, Prachinburi 
                                         </p>
                                     </div>
                                 </div>
@@ -388,13 +388,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.3s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Ayutthaya4.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                           25 Mw  Solar Power Plant for <br>BCP Bang Pa Hun, Ayutthaya
+                                           25 Mw  Solar Power Plant<br>BCP Bang Pa Hun, Ayutthaya
                                         </p>
                                     </div>
                                 </div>
@@ -404,13 +404,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.4s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Chaiyaphum4.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            25 Mw  Solar Power Plant for <br>BCP Bamnejnarong, Chaiyapum
+                                            25 Mw  Solar Power Plant<br>BCP Bamnejnarong, Chaiyapum
                                         </p>
                                     </div>
                                 </div>
@@ -420,13 +420,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.5s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/BCP4.png" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            44 Mw  Solar Power Plant for <br>BCP Bang Pa-in, Ayutthaya
+                                            44 Mw  Solar Power Plant<br>BCP Bang Pa-in, Ayutthaya
                                         </p>
                                     </div>
                                 </div>
@@ -436,7 +436,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Essilor4.jpg" alt="Image">
@@ -453,7 +453,7 @@
                             </div>
                         </div>
 
-                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.8s">
+                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item fourth wow fadeInUp" data-wow-delay="0.1s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Nissan13.png" alt="Image">
