--- a/public/MEA2.html
+++ b/public/MEA2.html
@@ -140,14 +140,14 @@
                                     <br /> -->
                                     <!-- <p>Area	&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;: 1,350 Square Meter</p>
                                     <br /> -->
-                                    <p>Project Value  &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; : 7 Million Baht </p>
+                                    <p>Project Value   &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;   : 7 Million Baht </p>
                                     <br />
                                     <p>Year &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;	&nbsp; &nbsp; &nbsp;&nbsp;: 2020-2021</p>
                                 </div>
                                 <br /><br />
-                                <img src="img/MEA4.png">
+                                <img class= "wow fadeInUp" data-wow-delay="0.2s" src="img/MEA4.png">
                                 <br /><br />
-                                <img src="img/MEA5.png">
+                                <img class= "wow fadeInUp" data-wow-delay="0.3s"src="img/MEA5.png">
                                 
                             </div>
                         </div> 
@@ -155,7 +155,7 @@
                         <div class="row">
                             <div class="col-md-12 text-center">
                                 <div class="sin-text">
-                                        <a class="btn" href="portfolio.html">Back</a>
+                                        <a class="btn wow fadeInUp" data-wow-delay="0.3s" href="portfolio.html">Back</a>
                                 </div>
                             </div>
                         </div>             
