--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -159,7 +159,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.2s">
+                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.2s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/UN4.png" alt="Image">
@@ -170,7 +170,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Orange Line Metropolitan</h3>
+                                    <h3>Orange Line MRT station</h3>
                                     <a class="btn" href="UN01.html" >+</a>
                                 </div>
                             </div>
