--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
                                 <a href="about.html" class="nav-item nav-link">About us</a>
                                 <a href="service.html" class="nav-item nav-link">Services</a>
                                 <!-- <a href="team.html" class="nav-item nav-link"></a> -->
-                                <a href="portfolio.html" class="nav-item nav-link">Project</a>
+                                <a href="portfolio.php" class="nav-item nav-link">Project</a>
                                 <!-- <a href="blog.html" class="dnav-item nav-link">คำรับรอง</a> -->
                                 <a href="contact.html" class="nav-item nav-link">Contact us</a>
                             </div>
@@ -803,7 +803,7 @@
                     <div class="row">
                         <div class="col-md-12 text-center">
                            <div class="port-text">
-                                <a class="btn" href="portfolio.html">See More</a>
+                                <a class="btn" href="portfolio.php">See More</a>
                            </div>
                         </div>
                     </div>
