--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -132,7 +132,7 @@
                         <p>Our Projects</p>
                         <h2>Visit Our Projects</h2>
                     </div>
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="col-12">
                             <ul id="portfolio-flters">
                                 <li data-filter=".first" class="filter-active">1</li>
@@ -141,7 +141,7 @@
                                 <li data-filter=".fourth">4</li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="row portfolio-container">
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.1s">
                             <div class="portfolio-warp">
