--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
                         <img src="img/home1.JPG" alt="Carousel Image">
                         <div class="carousel-caption">
                             <p class="animated fadeInRight">High-Quality work</p>
-                            <h1 class="animated fadeInLeft">with technology and On-time delivery is our key to success</h1>
+                            <h1 class="animated fadeInLeft">and On-time Delivery are our keys to success</h1>
                             <a class="btn animated fadeInUp" href="portfolio.html">Our Projects</a>
                         </div>
                     </div>
