--- a/public/index.html
+++ b/public/index.html
@@ -315,7 +315,7 @@
                                     </div> -->
                                 </div>
                                 <div class="service-text">
-                                    <h3>CONSTRUCTION WOR</h3>
+                                    <h3>CONSTRUCTION WORK</h3>
                                     
                                 </div>
                             </div>
