--- a/public/BCP , Buriram2.html
+++ b/public/BCP , Buriram2.html
@@ -19,6 +19,7 @@
         <link href="lib/flaticon/font/flaticon.css" rel="stylesheet"> 
         <link href="lib/animate/animate.min.css" rel="stylesheet">
         <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+        
         <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
         <link href="lib/slick/slick.css" rel="stylesheet">
         <link href="lib/slick/slick-theme.css" rel="stylesheet">
@@ -40,43 +41,6 @@
                                 </a>
                             </div>
                         </div>
-                        <!-- <div class="col-lg-8 col-md-7 d-none d-lg-block">
-                            <div class="row">
-                                <div class="col-4">
-                                    <div class="top-bar-item">
-                                        <div class="top-bar-icon">
-                                            <i class="flaticon-calendar"></i>
-                                        </div>
-                                        <div class="top-bar-text">
-                                            <h3>เวลาทำการ</h3>
-                                            <p>จันทร์ - เสาร์, 8:00 - 17:00</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <div class="top-bar-item">
-                                        <div class="top-bar-icon">
-                                            <i class="flaticon-call"></i>
-                                        </div>
-                                        <div class="top-bar-text">
-                                            <h3>ติดต่อเรา</h3>
-                                            <p>+6624432256</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <div class="top-bar-item">
-                                        <div class="top-bar-icon">
-                                            <i class="flaticon-send-mail"></i>
-                                        </div>
-                                        <div class="top-bar-text">
-                                            <h3>อีเมลหาเรา</h3>
-                                            <p>wuttisit.atc@gmail.com</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> -->
                     </div>
                 </div>
             </div>
@@ -148,24 +112,72 @@
                                     <br />
                                     <p>Year &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;	&nbsp; &nbsp; &nbsp;&nbsp;:  2013-2014</p>
                                 </div>
-                                <br /><br />
-                                <img src="img/Buriram4.png">
-                                <br /><br />
-                                <img src="img/Buriram5.png">
-                                <br /><br />
-                                <img src="img/Buriram6.png">
                             </div> 
                         </div>
-                         <br>
-                         <div class="row">
-                            <div class="col-md-12 text-center">
-                                <div class="sin-text">
-                                        <a class="btn" href="portfolio.html">Back</a>
-                                </div>
-                            </div>
-                        </div>              
                     </div>    
                 </div> 
+
+                 <div class="slideshow-container">
+
+            <!-- Full-width images with number and caption text  -->
+            <div class="mySlides">
+                <img src="img/Buriram4.png" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <img src="img/Burirum5.png" style="width:100%">
+
+            </div>
+
+            <div class="mySlides">
+                <img src="img/Burirum6.png" style="width:100%">
+            </div>
+
+            <!--Next and previous buttons  -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br>
+
+
+        <script>
+            var slideIndex = 1;
+            showSlides(slideIndex);
+
+            function plusSlides(n) {
+                showSlides(slideIndex += n);
+            }
+
+            function currentSlide(n) {
+                showSlides(slideIndex = n);
+            }
+
+            function showSlides(n) {
+                var i;
+                var slides = document.getElementsByClassName("mySlides");
+                var dots = document.getElementsByClassName("dot");
+                if (n > slides.length) { slideIndex = 1 }
+                if (n < 1) { slideIndex = slides.length }
+                for (i = 0; i < slides.length; i++) {
+                    slides[i].style.display = "none";
+                }
+                for (i = 0; i < dots.length; i++) {
+                    dots[i].className = dots[i].className.replace("active", "");
+                }
+                slides[slideIndex - 1].style.display = "block";
+                dots[slideIndex - 1].className += " active";
+            }
+        </script>
+
+        <div class="single">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="sin-text">
+                        <a class="btn" href="portfolio.html">Back</a>
+                    </div>
+                </div>
+            </div>
+        </div>
             <!-- Single Post End-->   
 
 
