--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -143,7 +143,7 @@
                         </div>
                     </div> -->
                     <div class="row portfolio-container">
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/portfolio-1.jpg" alt="Image">
@@ -159,7 +159,7 @@
                                 </div>
                             </div>
                         </div>
-                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.2s">
+                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/UN4.png" alt="Image">
@@ -175,7 +175,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/TG4.png" alt="Image">
@@ -191,7 +191,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/TC3.png" alt="Image">
@@ -207,7 +207,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/MEA7.png" alt="Image">
@@ -223,7 +223,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/MEA6.png" alt="Image">
@@ -240,7 +240,7 @@
                                 </div>
                             </div>
                         </div>
-                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.1s">
+                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/FE4.jpg" alt="Image">
@@ -256,7 +256,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.2s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Petchkasem3.jpg" alt="Image">
@@ -291,7 +291,7 @@
                                 </div>
                             </div>
                         </div> -->
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Circle11.jpg" alt="Image">
@@ -307,7 +307,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/SIG5.jpg" alt="Image">
@@ -323,7 +323,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Circle10.jpg" alt="Image">
@@ -339,7 +339,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Buriram9.jpg" alt="Image">
@@ -356,7 +356,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Buriram7.jpg" alt="Image">
@@ -372,7 +372,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.2s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Prachinburi4.jpg" alt="Image">
@@ -388,7 +388,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Ayutthaya4.jpg" alt="Image">
@@ -404,7 +404,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Chaiyaphum4.jpg" alt="Image">
@@ -420,7 +420,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/BCP4.png" alt="Image">
@@ -436,7 +436,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Essilor4.jpg" alt="Image">
@@ -453,7 +453,7 @@
                             </div>
                         </div>
 
-                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item fourth wow fadeInUp" data-wow-delay="0.1s">
+                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Nissan13.png" alt="Image">
@@ -471,6 +471,14 @@
                         </div>
 
                     </div>
+                      <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
                 
                 </div>
             </div>
@@ -478,7 +486,7 @@
 
 
             <!-- Footer Start -->
-            <div class="footer wow fadeIn" data-wow-delay="0.5s">
+            <div class="footer wow fadeIn">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 col-lg-5">
