--- a/public/MN01.html
+++ b/public/MN01.html
@@ -154,17 +154,17 @@
 
             <!-- Full-width images with number and caption text  -->
             <div class="mySlides">
-                <img src="img/FE1.png" style="width:100%">
+                <img src="img/MN1.png" style="width:100%">
             </div>
 
             <div class="mySlides">
-                <img src="img/FE2.png" style="width:100%">
+                <img src="img/MN2.png" style="width:100%">
 
             </div>
 
-            <div class="mySlides">
+            <!-- <div class="mySlides">
                 <img src="img/FE3.png" style="width:100%">
-            </div>
+            </div> -->
             <!--Next and previous buttons  -->
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
