--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -146,7 +146,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-1.jpg" alt="Image">
+                                    <img src="img/MN3.jpeg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                            New Raw Material Warehouse<br> Monde Nissin
