--- a/public/service.html
+++ b/public/service.html
@@ -128,62 +128,62 @@
 
 
         <!-- Service Start -->
-        <div class="service">
-            <div class="container">
-                <div class="section-header text-center">
-                    <p>Our Services</p>
-                    <h2>We Provide Services</h2>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="service-item">
-                            <div class="service-img">
-                                <img src="img/service-1.jpg" alt="Image">
-                                <!-- <div class="service-overlay">
+       <div class="service">
+                <div class="container">
+                    <div class="section-header text-center">
+                        <p>Our Services</p>
+                        <h2>We Provide Services</h2>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                            <div class="service-item">
+                                <div class="service-img">
+                                    <img src="img/service-3.jpg" alt="Image">
+                                    <!-- <div class="service-overlay">
                                         <p>
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
                                         </p>
                                     </div> -->
-                            </div>
-                            <div class="service-text">
-                                <h3>TURNKEY DESIGN AND BUILD</h3>
+                                </div>
+                                <div class="service-text">
+                                    <h3>TURNKEY DESIGN AND BUILD</h3>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="service-item">
-                            <div class="service-img">
-                                <img src="img/service-3.jpg" alt="Image">
-                                <!-- <div class="service-overlay">
+                        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+                            <div class="service-item">
+                                <div class="service-img">
+                                    <img src="img/Construction.jpg" alt="Image">
+                                    <!-- <div class="service-overlay">
                                         <p>
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
                                         </p>
                                     </div> -->
-                            </div>
-                            <div class="service-text">
-                                <h3>CONSTRUCTION WORK</h3>
+                                </div>
+                                <div class="service-text">
+                                    <h3>CONSTRUCTION WORK</h3>
+                                    
+                                </div>
                             </div>
                         </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="service-item">
-                            <div class="service-img">
-                                <img src="img/service-5.jpg" alt="Image">
-                                <!-- <div class="service-overlay">
+                        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                            <div class="service-item">
+                                <div class="service-img">
+                                    <img src="img/service-5.jpg" alt="Image">
+                                    <!-- <div class="service-overlay">
                                         <p>
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
                                         </p>
                                     </div> -->
-                            </div>
-                            <div class="service-text">
-                                <h3>MECHANICAL & ELECTRICAL SYSTEM WORK</h3>
+                                </div>
+                                <div class="service-text">
+                                    <h3>M&E SYSTEM WORK</h3>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
         <!-- Service End -->
 
 
