--- a/public/index.html
+++ b/public/index.html
@@ -750,13 +750,13 @@
                         </div>
                     </div> -->
                    <div class="row portfolio-container">
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-1.jpg" alt="Image">
+                                    <img src="img/MN3.jpeg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                           New Raw Material Warehouse<br>Monde Nissin
+                                           New Raw Material Warehouse<br> Monde Nissin
                                         </p>
                                     </div>
                                 </div>
