--- a/public/MN01.html
+++ b/public/MN01.html
@@ -154,11 +154,11 @@
 
             <!-- Full-width images with number and caption text  -->
             <div class="mySlides">
-                <img src="img/MN1.png" style="width:100%">
+                <img src="img/MN1.jpeg" style="width:100%">
             </div>
 
             <div class="mySlides">
-                <img src="img/MN2.png" style="width:100%">
+                <img src="img/MN2.jpeg" style="width:100%">
 
             </div>
 
