--- a/public/BCP , Buriram2.html
+++ b/public/BCP , Buriram2.html
@@ -19,7 +19,7 @@
         <link href="lib/flaticon/font/flaticon.css" rel="stylesheet"> 
         <link href="lib/animate/animate.min.css" rel="stylesheet">
         <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-        
+        <link href="lib/slide/slide.css" rel="stylesheet">
         <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
         <link href="lib/slick/slick.css" rel="stylesheet">
         <link href="lib/slick/slick-theme.css" rel="stylesheet">
@@ -116,6 +116,9 @@
                         </div>
                     </div>    
                 </div> 
+
+
+
 
                  <div class="slideshow-container">
 
