--- a/public/BCP , Buriram2.html
+++ b/public/BCP , Buriram2.html
@@ -128,12 +128,12 @@
             </div>
 
             <div class="mySlides">
-                <img src="img/Burirum5.png" style="width:100%">
+                <img src="img/Buriram5.png" style="width:100%">
 
             </div>
 
             <div class="mySlides">
-                <img src="img/Burirum6.png" style="width:100%">
+                <img src="img/Buriram6.png" style="width:100%">
             </div>
 
             <!--Next and previous buttons  -->
