--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -132,16 +132,16 @@
                         <p>Our Projects</p>
                         <h2>Visit Our Projects</h2>
                     </div>
-                    <!-- <div class="row">
+                    <div class="row">
                         <div class="col-12">
                             <ul id="portfolio-flters">
                                 <li data-filter=".first" class="filter-active">1</li>
-                                <li data-filter=".second">2</li>
+                                <!-- <li data-filter=".second">2</li>
                                 <li data-filter=".third">3</li>
-                                <li data-filter=".fourth">4</li>
+                                <li data-filter=".fourth">4</li> -->
                             </ul>
                         </div>
-                    </div> -->
+                    </div>
                     <div class="row portfolio-container">
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
                             <div class="portfolio-warp">
@@ -307,7 +307,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/SIG5.jpg" alt="Image">
@@ -323,7 +323,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Circle10.jpg" alt="Image">
@@ -339,7 +339,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Buriram9.jpg" alt="Image">
@@ -356,7 +356,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Buriram7.jpg" alt="Image">
@@ -372,7 +372,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Prachinburi4.jpg" alt="Image">
@@ -388,7 +388,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Ayutthaya4.jpg" alt="Image">
@@ -404,7 +404,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Chaiyaphum4.jpg" alt="Image">
@@ -420,7 +420,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/BCP4.png" alt="Image">
@@ -436,7 +436,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Essilor4.jpg" alt="Image">
@@ -453,7 +453,7 @@
                             </div>
                         </div>
 
-                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
+                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/Nissan13.png" alt="Image">
