--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -135,7 +135,7 @@
                     <div class="row">
                         <div class="col-12">
                             <ul id="portfolio-flters">
-                                <li data-filter=".first" class="filter-active">1</li>
+                                <li data-filter=".first" class="filter-active">ALL</li>
                                 <!-- <li data-filter=".second">2</li>
                                 <li data-filter=".third">3</li>
                                 <li data-filter=".fourth">4</li> -->
