--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -142,7 +142,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="row portfolio-container">
+                    <div class="row">
                         <div class="col-lg-4 portfolio-item">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
