--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -267,9 +267,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>
-                                        10th Floors Car Park Building<br>Petkasem 2 Hospital (Bangkok)
-                                    </h3>
+                                    <h3>10th Floors Car Park Building<br>Petkasem 2 Hospital (Bangkok)</h3>
                                     <a class="btn" href="Petkasem2.html" >+</a>
                                 </div>
                             </div>
