--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -132,16 +132,16 @@
                         <p>Our Projects</p>
                         <h2>Visit Our Projects</h2>
                     </div>
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="col-12">
                             <ul id="portfolio-flters">
                                 <li class="filter-active">ALL</li>
-                                <!-- <li data-filter=".">2</li>
+                                <li data-filter=".">2</li>
                                 <li data-filter=".">3</li>
-                                <li data-filter=".fourth">4</li> -->
+                                <li data-filter=".fourth">4</li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="row">
                         <div class="col-lg-4 portfolio-item">
                             <div class="portfolio-warp">
