--- a/public/MN01.html
+++ b/public/MN01.html
@@ -158,7 +158,11 @@
             </div>
 
             <div class="mySlides">
-                <img src="img/MN2.jpeg" style="width:100%">
+                <img src="img/MN4.jpeg" style="width:100%">
+
+            </div>
+             <div class="mySlides">
+                <img src="img/MN5.jpeg" style="width:100%">
 
             </div>
 
