--- a/public/UN01.html
+++ b/public/UN01.html
@@ -154,16 +154,19 @@
 
             <!-- Full-width images with number and caption text  -->
             <div class="mySlides">
-                <img src="img/UN1.png" style="width:100%">
+                <img src="img/UN1.jpeg" style="width:100%">
             </div>
 
             <div class="mySlides">
-                <img src="img/UN2.png" style="width:100%">
-
+                <img src="img/UN2.jpeg" style="width:100%">
             </div>
 
             <div class="mySlides">
-                <img src="img/UN3.png" style="width:100%">
+                <img src="img/UN3.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <img src="img/UN5.jpeg" style="width:100%">
             </div>
 
             <!--Next and previous buttons  -->
