--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -162,7 +162,7 @@
                          <div class="col-lg-4 portfolio-item ">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/UN6.png" alt="Image">
+                                    <img src="img/UN6.jpeg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                             โครงการก่อสร้างสถานีรถไฟฟ้าสายสีส้ม (M&E System Work)
