--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -146,7 +146,7 @@
                         <div class="col-lg-4 portfolio-item ">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/MN3.jpeg" alt="Image">
+                                    <img src="img/MN.jpeg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                              New Raw Material Warehouse<br> Monde Nissin
