--- a/public/index.html
+++ b/public/index.html
@@ -753,7 +753,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/MN3.jpeg" alt="Image">
+                                    <img src="img/MN6.jpeg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                            New Raw Material Warehouse<br> Monde Nissin
@@ -769,7 +769,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.2s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/UN4.png" alt="Image">
+                                    <img src="img/UN6.jpeg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                             โครงการก่อสร้างสถานีรถไฟฟ้าสายสีส้ม (M&E System Work)
