--- a/public/Future Electrical.html
+++ b/public/Future Electrical.html
@@ -189,7 +189,7 @@
                                 <br>
                                 <br>
                                 <p><i class="fa fa-phone-alt"></i>Telephone</p>
-                                <p>+66 2443 2256 <br>+668 6388 4916</p>
+                                <p>+66 2443 2256 <br>+668 3916 4289<br>+668 9435 4426</p>
                             </div>
                         </div>
                          &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
@@ -200,7 +200,7 @@
                                 <br>
                                 <br>
                                 <p><i class="fa fa-envelope"></i>E-mail</p>
-                                <p></i>wuttisit.atc@gmail.com</p>
+                                <p>wuttisit.atc@gmail.com<br>pacharaphorn.atc@gmail.com</p>
                             </div>
                         </div>
                         
