--- a/public/contact.html
+++ b/public/contact.html
@@ -105,6 +105,7 @@
                                         <h2>Phone</h2>
                                         <p>+66 2443 2256</p>
                                         <p>+668 6388 4916</p>
+                                        <p>+668 9435 4426</p>
                                     </div>
                                 </div>
                                 <div class="contact-item">
@@ -112,6 +113,7 @@
                                     <div class="contact-text">
                                         <h2>Email</h2>
                                         <p>wuttisit.atc@gmail.com</p>
+                                        <p>pacharaphorn.atc@gmail.com</p>
                                     </div>
                                 </div>
                             </div>
